# tinyalign

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  MANIFEST.in  README.md  buildwheels.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/: lib.rs
src/alignlib/: __init__.py  _core.pyx
src/tinyalign/: _core.pyi
tests/: test_core.py  test_tinyalign.py
