[build-system]
requires = ["setuptools >= 64", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyalign"
version = "0.3.0"
authors = [
    {name = "Marcel Martin", email = "marcel.martin@scilifelab.se"}
]
description = "Fast banded edit distance"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/marcelm/tinyalign/"

[[tool.setuptools-rust.ext-modules]]
target = "tinyalign"  # TODO The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
                             # but you can add a prefix to nest it inside of a Python package.

[tool.cibuildwheel]
environment = "CFLAGS=-g0"
test-command = ["cd {project}; pytest"]
test-requires = "pytest"
